--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </head>
 
 <body style="margin:0;padding:0">
-<iframe src="https://goo.gl/7xyG2i" height="100%" width="100%" style="position: absolute; left: 0px; border: none;"></iframe>
+<iframe src="https://goo.gl/XYRkhf" height="100%" width="100%" style="position: absolute; left: 0px; border: none;"></iframe>
 
 </body>
